fix no breaks in mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2907,9 +2907,6 @@ pre code {
 				display: block;
 			}
 
-				.spotlight br {
-					display: none;
-				}
 
 				.spotlight .image {
 					width: 100%;
@@ -3876,7 +3873,7 @@ pre code {
 
 		#banner .photo-gallery img {
 			max-width: 32%; /* Adjust photo size */
-			max-height: 500px;
+			max-height: 550px;
 			height: auto; /* Maintain aspect ratio */
 			border-radius: 5px; /* Optional: Add rounded corners */
 			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add subtle shadow */
@@ -3893,9 +3890,6 @@ pre code {
 					font-size: 1.5em;
 				}
 
-				#banner br {
-					display: none;
-				}
 
 				#banner .more {
 					display: none;
